# sticky

./: .prettierignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  rustfmt.toml
.github/workflows/: notary-status.yaml  release.yaml
scripts/: create-migration.ts  replace-version.ts
src-tauri/: .taurignore  Cargo.toml  tauri-dev.conf.json  tauri.conf.json
src-tauri/capabilities/: capabilities.json  default.json  window.json
src-tauri/icons/dev/: icon.icns
src-tauri/icons/release/: icon.icns
src-tauri/migrations/2025-07-21-185247_create_notes/: up.sql
src-tauri/src/: lib.rs  mac_window.rs  macros.rs  tray.rs  update.rs  window.rs  window_menu.rs
src-tauri/src/window/: command.rs  header.rs  link.rs  main.rs  mod.rs  panel.rs  search.rs  toast.rs
src-tauri/sticky-matter/: Cargo.toml
src-tauri/sticky-matter/src/: lib.rs
src-tauri/sticky-models/: Cargo.toml  index.ts  package.json
src-tauri/sticky-models/bindings/: gen_constants.ts  gen_models.ts
src-tauri/sticky-models/migrations/: 20250722021424_init.sql  20250803201400_add_settings.sql
src-tauri/sticky-models/src/: constants.rs  error.rs  lib.rs  manager.rs  migrate.rs  models.rs  plugin.rs  queries.rs  store.rs  watcher.rs
src-web/: index.html  package.json  tsconfig.json  vite.config.ts
src-web/src/: main.tsx  report-web-vitals.ts  routeTree.gen.ts  theme.ts
src-web/src/components/: browse-dialog.tsx  command-palette.tsx  default-note-content.json  divider.tsx  find-bar.tsx  header.tsx  note-item.tsx  search-note-item.tsx  skeleton-editor.tsx
src-web/src/components/menu-bar/: heading-selector.tsx  link-selector-popover.tsx  menu-bar-items.tsx  menu-bar.tsx
src-web/src/components/ui/: button.tsx  dialog.tsx  dropdown-menu.tsx  heading.tsx  input.tsx  label.tsx  popover.tsx  select-native.tsx  select.tsx  sheet.tsx  text.tsx  textarea.tsx
src-web/src/hooks/: use-command-palette.ts  use-measured-width.ts  use-note-actions.ts  use-note-autosave.ts  use-note-sync.ts  use-note-title.ts  use-on-focus-changed.ts  use-on-window-resize.ts  use-window-autosize.ts  use-window-hover.ts  use-window-reveal.ts
src-web/src/lib/: autosize.ts  command-palette-events.ts  commands.ts  content.test.ts  content.ts  date.ts  default-note-content.json  editor-extensions.test.ts  editor-extensions.ts  highlighter.ts  list.ts  markdown.test.ts  markdown.ts  number.ts  settings.ts  theme.ts  transaction.ts  welcome-note-content.json  welcome-note-content.ts
src-web/src/lib/extensions/: code-block.ts  extensions.test.ts  extensions.ts  find-item.ts  find.ts  indent.ts  keymap.ts  list-kit.ts  placeholder.ts  sink.ts  starter-kit.ts  underline.ts
src-web/src/queries/: notes.ts
src-web/src/routes/: $noteId.tsx  __root.tsx  commands.tsx  index.tsx  link.tsx  new.tsx  search.tsx  settings.tsx  toast.tsx
src-web/src/styles/: _editor-content.css  global.css
