[package]
name = "sticky-models"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
log = "0.4.22"
nanoid = "0.4.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
sticky-matter = { workspace = true }
tempfile = "3.20"
tauri = { workspace = true }
thiserror = "2.0.11"
ts-rs = { workspace = true, features = ["chrono-impl", "serde-json-impl"] }
notify = "8"
notify-debouncer-full = "0.7"
